--- a/src/main/front/package.json
+++ b/src/main/front/package.json
@@ -13,8 +13,13 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.6.0",
     "@nuxtjs/proxy": "^1.3.3",
+    "axios": "^0.19.0",
+    "axios-cookiejar-support": "^0.5.0",
+    "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "cookieparser": "^0.1.0",
     "jquery": "^3.3.1",
+    "js-cookie": "^2.2.1",
     "nuxt": "^2.8.1",
     "vue": "^2.6.10"
   }
