--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:49161:xe
+spring.datasource.url=jdbc:oracle:thin:@nexgrid2.iptime.org:11522:ADCBDBO
 spring.datasource.username=gfn
-spring.datasource.password=gfn1234
+spring.datasource.password=gfn
 
-logging.level.web = debug
+debug=true
+logging.level.com.nexgrid.cgsg.admin.mapper = trace
 
-mybatis.mapper-locations=mybatis/map/**/*.xml
+mybatis.type-aliases-package=com.nexgrid.cgsg.admin.vo
+mybatis.mapper-locations=classpath:mapper/**/*.xml
+
+server.servlet.context-path=/api
