--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ mybatis.type-aliases-package=com.nexgrid.cgsg.admin.vo
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 
 server.servlet.context-path=/api
+
+spring.http.encoding.charset=utf-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
