--- a/src/main/front/package.json
+++ b/src/main/front/package.json
@@ -21,6 +21,7 @@
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.1",
     "nuxt": "^2.8.1",
+    "nuxt-validate": "^1.0.1",
     "vue": "^2.6.10",
     "vue-js-modal": "^1.3.31"
   }
