--- a/src/main/front/package.json
+++ b/src/main/front/package.json
@@ -23,6 +23,7 @@
     "nuxt": "^2.8.1",
     "nuxt-validate": "^1.0.1",
     "vue": "^2.6.10",
-    "vue-js-modal": "^1.3.31"
+    "vue-js-modal": "^1.3.31",
+    "vuejs-datepicker": "^1.6.2"
   }
 }
