-- update : front 폼 validation 적용

--- a/src/main/front/package.json
+++ b/src/main/front/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nuxt",
-    "lint": "eslint"
+    "lint": "eslint",
+    "build": "nuxt build",
+    "generate": "nuxt generate"
   },
   "author": "",
   "license": "ISC",
