--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <java.version>1.8</java.version>
         <spring.jwt.version>1.0.10.RELEASE</spring.jwt.version>
         <spring.oauth2.version>2.0.7.RELEASE</spring.oauth2.version>
+        <lib.path>${basedir}/src/main/resources/libs</lib.path>
     </properties>
 
     <dependencies>
@@ -79,18 +80,18 @@
 
         <dependency>
             <groupId>com.nextgrid</groupId>
-            <artifactId>crpyto</artifactId>
+            <artifactId>nexgrid_SHA512</artifactId>
             <version>1.1.1</version>
             <scope>system</scope>
-            <systemPath>${basedir}/src/main/resources/libs/nexgrid_SHA512.jar</systemPath>
+            <systemPath>${lib.path}/nexgrid_SHA512.jar</systemPath>
         </dependency>
 
         <dependency>
             <groupId>org.oracle</groupId>
-            <artifactId>oracle</artifactId>
+            <artifactId>ojdbc7</artifactId>
             <version>1.1.1</version>
             <scope>system</scope>
-            <systemPath>${basedir}/src/main/resources/libs/ojdbc7.jar</systemPath>
+            <systemPath>${lib.path}/ojdbc7.jar</systemPath>
         </dependency>
 
         <dependency>
@@ -115,6 +116,27 @@
                 <configuration>
                     <includeSystemScope>true</includeSystemScope>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.10</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/${project.artifactId}-${project.version}/WEB-INF/lib</outputDirectory>
+                            <overWriteReleases>false</overWriteReleases>
+                            <overWriteSnapshots>false</overWriteSnapshots>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                            <includeScope>system</includeScope>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>com.github.eirslett</groupId>
