--- a/src/main/front/package.json
+++ b/src/main/front/package.json
@@ -26,6 +26,7 @@
     "nuxt-validate": "^1.0.1",
     "vue": "^2.6.10",
     "vue-js-modal": "^1.3.31",
+    "vue-json-excel": "^0.2.98",
     "vuejs-datepicker": "^1.6.2"
   }
 }
