--- a/src/main/front/package.json
+++ b/src/main/front/package.json
@@ -27,6 +27,7 @@
     "vue": "^2.6.10",
     "vue-js-modal": "^1.3.31",
     "vue-json-excel": "^0.2.98",
-    "vuejs-datepicker": "^1.6.2"
+    "vuejs-datepicker": "^1.6.2",
+    "@nuxtjs/moment": "^1.3.0"
   }
 }
