- update : 프로모션코드 상태값 : 기간만료 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
 debug: true
 logging:
   level:
-    com.nexgrid.cgsg.admin.mapper : trace
+    com.nexgrid.cgsg.admin.mapper : debug
 
 mybatis:
   type-aliases-package: com.nexgrid.cgsg.admin.vo
