--- a/src/main/front/package.json
+++ b/src/main/front/package.json
@@ -14,20 +14,24 @@
   "license": "ISC",
   "dependencies": {
     "@nuxtjs/axios": "^5.6.0",
+    "@nuxtjs/moment": "^1.3.0",
     "@nuxtjs/proxy": "^1.3.3",
     "axios": "^0.19.0",
     "axios-cookiejar-support": "^0.5.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.11",
     "cookieparser": "^0.1.0",
+    "intersection-observer": "^0.7.0",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.1",
     "nuxt": "^2.8.1",
+    "nuxt-polyfill": "^1.0.3",
     "nuxt-validate": "^1.0.1",
+    "smoothscroll-polyfill": "^0.4.4",
+    "url-polyfill": "^1.1.7",
     "vue": "^2.6.10",
     "vue-js-modal": "^1.3.31",
     "vue-json-excel": "^0.2.98",
-    "vuejs-datepicker": "^1.6.2",
-    "@nuxtjs/moment": "^1.3.0"
+    "vuejs-datepicker": "^1.6.2"
   }
 }
