- add : controller request/response 로그로직 추가,  시스템로그 파일으로 남게 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,10 +7,11 @@ spring:
       enabled: true
       force: true
 
-debug: true
+#debug: true
 logging:
   level:
-    com.nexgrid.cgsg.admin.mapper : debug
+    com.nexgrid.cgsg.admin.mapper : info
+  config: classpath:log4j2-local.xml
 
 mybatis:
   type-aliases-package: com.nexgrid.cgsg.admin.vo
@@ -52,3 +53,6 @@ spring:
   profiles: dev
   datasource:
     jndi-name: jdbc/gfnDB
+logging:
+  config: classpath:log4j2-real.xml
+
