- update : 서버별로 서비스로그 이름이 달라서 log4j2 파일 분리함

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,11 +48,26 @@ server:
     context-path: /api
   port: 8080
 
---- ## 개발
+--- ## local tomcat
 spring:
-  profiles: dev
+  profiles: localTomcat
+  datasource:
+    jndi-name: jdbc/gfnDB
+
+
+--- ## 개발1
+spring:
+  profiles: dev1
   datasource:
     jndi-name: jdbc/gfnDB
 logging:
-  config: classpath:log4j2-real.xml
+  config: classpath:log4j2-real1.xml
+
+--- ## 개발2
+spring:
+  profiles: dev2
+  datasource:
+    jndi-name: jdbc/gfnDB
+logging:
+  config: classpath:log4j2-real2.xml
 
